--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "bootstrap": "^4.0.0-beta",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "jquery": "^3.6.0",
     "lint-staged": "^11.1.2",
+    "popper.js": "^1.16.1",
     "prettier": "^2.4.1"
   },
   "gitHooks": {
