--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-init": "^5.0.4",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-croppie": "^2.0.2",
     "vue-router": "4"
   },
   "devDependencies": {
