--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.13",
     "vue-croppie": "^2.0.2",
     "vue-router": "4",
+    "vue3-datepicker": "^0.3.4",
     "vuelidate": "^0.7.7"
   },
   "devDependencies": {
