--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@popperjs/core": "^2.11.5",
     "@vue/cli-init": "^5.0.4",
     "@vuelidate/core": "^2.0.0-alpha.41",
     "@vuelidate/validators": "^2.0.0-alpha.29",
     "core-js": "^3.8.3",
+    "popper": "^1.0.1",
     "vue": "^3.2.13",
     "vue-croppie": "^2.0.2",
     "vue-router": "4",
@@ -32,7 +34,6 @@
     "eslint-plugin-vue": "^8.0.3",
     "jquery": "^3.6.0",
     "lint-staged": "^11.1.2",
-    "popper.js": "^1.16.1",
     "prettier": "^2.4.1"
   },
   "gitHooks": {
