--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@vue/cli-init": "^5.0.4",
     "@vuelidate/core": "^2.0.0-alpha.41",
     "@vuelidate/validators": "^2.0.0-alpha.29",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "moment": "^2.29.3",
     "popper": "^1.0.1",
     "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
     "vue-croppie": "^2.0.2",
     "vue-router": "4",
     "vue3-datepicker": "^0.3.4",
